--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Build antlr2 needed for gjdoc http://www.antlr2.org/download/antlr-2.7.7.tar.gz
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
